welcome.lessons.welcome.array.has271.Has271.scala.error
has271:3: error: not found: value num
  if (( nums(i)==(nums(i+1)-5) & ((nums(i)+1)==nums(i+2) || (nums(i)-1)==(nums(i+2)) || (num(i)-2)==nums(i+2) || (nums(i)-3)==nums(i+2)))){
                                                                                         ^